# matryoshka-embedding

./: .gitignore  Makefile  README.md  pyproject.toml
core/db/: __init__.py  qdrant_client.py
core/embedding/: __init__.py  client.py
experiments/: 0_init.py  1_append_qdrant.py
resources/: .local.env
